--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://taova.github.io/pdf-viewer",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Taova/pdf-viewer.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
